--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
@@ -10,7 +10,7 @@
         <PackageReference Include="FluentMigrator.Runner" Version="3.2.8" />
         <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.8" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
-        <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
+        <PackageReference Include="Npgsql" Version="5.0.0" />
         <PackageReference Include="TicketFlow.Common" Version="1.8.2" />
         <PackageReference Include="TicketFlow.IdentityService.Client" Version="1.1.5" />
     </ItemGroup>
