--- a/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.TicketService/TicketFlow.TicketService.csproj
@@ -19,5 +19,11 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>TicketFlow.TicketService.Test</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.TicketService.IntegrationTest</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 </Project>
