--- a/backend/dotnet/ticketflow/TicketFlow.ApiGateway/Dockerfile
+++ b/backend/dotnet/ticketflow/TicketFlow.ApiGateway/Dockerfile
@@ -13,6 +13,6 @@ RUN dotnet publish --no-restore -v q -c Release -o publishFolder
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /build/publishFolder .
-ENTRYPOINT ["dotnet", "TicketFlow.ApiGateway.dll"]
+CMD ["dotnet", "TicketFlow.ApiGateway.dll"]
 
 EXPOSE 8080
