Added ProfileApiViaProxyTest with some empty test cases

--- a/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.ProfileService/TicketFlow.ProfileService.csproj
@@ -19,5 +19,11 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>TicketFlow.ProfileService.Test</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.ProfileService.IntegrationTest</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 </Project>
