--- a/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
+++ b/backend/dotnet/ticketflow/TicketFlow.IdentityService/TicketFlow.IdentityService.csproj
@@ -26,5 +26,11 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>TicketFlow.IdentityService.Test</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>TicketFlow.IdentityService.IntegrationTest</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 </Project>
