Updated react action

--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -10,28 +10,29 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./frontend/ticketflow
 
     strategy:
       matrix:
         node-version: [12.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Go to frontend app
-      run: cd ./frontend/ticketflow
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install dependencies
-      run: npm install
+      - name: Run the tests
+        run: npm test
 
-    - name: Run the tests
-      run: npm test
-
-    - name: Build
-      run: npm run build
+      - name: Build
+         run: npm run build
